// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Article /> does not render the article details 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <a
              class="c3"
              data-testid="article-header-title"
              href="/awesome-article"
            >
              Awesome Article
            </a>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> does not render the article language name 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
              data-testid="article-header-title"
            >
              Awesome Article
            </h2>
            <p
              class="c4"
            >
               
               · 
              article.languagePrefix languages.en
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            />
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> does not render the link 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
              data-testid="article-header-title"
            >
              Awesome Article
            </h2>
            <p
              class="c4"
            >
              18/01/2020
               
              · 5 article.minutes article.ofReading
               · 
              article.languagePrefix languages.en
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            />
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> does not render the reading time 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <h2
              class="c3"
              data-testid="article-header-title"
            >
              Awesome Article
            </h2>
            <p
              class="c4"
            >
              18/01/2020
               
               · 
              article.languagePrefix languages.en
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            />
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> does not render the tags 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <a
              class="c3"
              data-testid="article-header-title"
              href="/awesome-article"
            >
              Awesome Article
            </a>
            <p
              class="c4"
            >
              20/07/2020
               
              · 5 article.minutes article.ofReading
               · 
              article.languagePrefix languages.pt
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            />
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> renders properly 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c6 {
  list-style: none;
  padding: 0px 10px 10px 0;
  margin-bottom: 5px;
}

.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  font-size: 16px;
  font-weight: 700;
  text-transform: lowercase;
}

.c7:hover,
.c7:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <a
              class="c3"
              data-testid="article-header-title"
              href="/awesome-article"
            >
              Awesome Article
            </a>
            <p
              class="c4"
            >
              18/01/2020
               
              · 5 article.minutes article.ofReading
               · 
              article.languagePrefix languages.en
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            >
              <li
                class="c6"
                data-testid="article-header-tag"
              >
                <a
                  class="c7"
                  href="/tags/jest"
                >
                  #
                  jest
                </a>
              </li>
              <li
                class="c6"
                data-testid="article-header-tag"
              >
                <a
                  class="c7"
                  href="/tags/testing-library"
                >
                  #
                  testing-library
                </a>
              </li>
            </ul>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> renders properly the body content 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

.c6 {
  line-height: 1.5;
  font-size: 19px;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 1px solid;
}

.c6 a:hover,
.c6 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c6 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
}

.c6 img {
  box-shadow: none !important;
}

.c6 h3 {
  font-size: 28px;
}

.c6 table.uses-table {
  width: 100%;
  margin: 40px 0;
}

.c6 table.uses-table td {
  text-align: center;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <a
              class="c3"
              data-testid="article-header-title"
              href="/awesome-article"
            >
              Awesome Article
            </a>
            <p
              class="c4"
            >
              18/01/2020
               
              · 5 article.minutes article.ofReading
               · 
              article.languagePrefix languages.pt
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            />
          </header>
          <section
            class="c6"
          >
            Article as a Children
          </section>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> renders properly the description 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

.c6 {
  line-height: 1.5;
  font-size: 19px;
}

.c6 a {
  -webkit-text-decoration: none;
  text-decoration: none;
  border-bottom: 1px solid;
}

.c6 a:hover,
.c6 a:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c6 blockquote {
  border-left: 5px solid;
  padding-left: 20px;
}

.c6 img {
  box-shadow: none !important;
}

.c6 h3 {
  font-size: 28px;
}

.c6 table.uses-table {
  width: 100%;
  margin: 40px 0;
}

.c6 table.uses-table td {
  text-align: center;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <a
              class="c3"
              data-testid="article-header-title"
              href="/awesome-article"
            >
              Awesome Article
            </a>
            <p
              class="c4"
            >
              18/01/2020
               
              · 5 article.minutes article.ofReading
               · 
              article.languagePrefix languages.pt
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            />
          </header>
          <section
            class="c6"
          >
            Article as a Children
          </section>
        </article>
      </main>
    </section>
  </div>
</body>
`;

exports[`<Article /> renders the article details 1`] = `
.c0 {
  max-width: 960px;
  margin: 0 auto;
  padding: 0 20px;
}

.c3 {
  box-shadow: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 36px;
  margin: 0;
  font-weight: 700;
}

.c3:hover,
.c3:focus {
  border-bottom: 1px solid undefined;
  outline: none;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  padding: 0;
  margin: 0;
}

.c6 {
  list-style: none;
  padding: 0px 10px 10px 0;
  margin-bottom: 5px;
}

.c7 {
  -webkit-text-decoration: none;
  text-decoration: none;
  box-shadow: none;
  font-size: 16px;
  font-weight: 700;
  text-transform: lowercase;
}

.c7:hover,
.c7:focus {
  border-bottom: 1px solid;
  outline: none;
}

.c1 {
  margin: 0 0 60px 0;
  font-weight: 400;
}

.c2 {
  margin: 20px 0 0 0;
}

.c4 {
  font-size: 19px;
  margin: 10px 0;
}

<body>
  <div>
    <section
      class="c0"
    >
      <main>
        <article
          class="c1"
          data-testid="article-item"
        >
          <header
            class="c2"
          >
            <a
              class="c3"
              data-testid="article-header-title"
              href="/awesome-article"
            >
              Awesome Article
            </a>
            <p
              class="c4"
            >
              18/01/2020
               
              · 5 article.minutes article.ofReading
               · 
              article.languagePrefix languages.en
            </p>
            <ul
              class="c5"
              data-testid="article-header-tags"
            >
              <li
                class="c6"
                data-testid="article-header-tag"
              >
                <a
                  class="c7"
                  href="/tags/jest"
                >
                  #
                  jest
                </a>
              </li>
              <li
                class="c6"
                data-testid="article-header-tag"
              >
                <a
                  class="c7"
                  href="/tags/testing-library"
                >
                  #
                  testing-library
                </a>
              </li>
            </ul>
          </header>
        </article>
      </main>
    </section>
  </div>
</body>
`;
